feat: refactor notification, add title attribute, and fix unit tests