@@ -1,19 +1,26 @@
 package io.github.danarrigo.if20502026k01g1doneate.controllers;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import io.github.danarrigo.if20502026k01g1doneate.entities.Notification;
 import io.github.danarrigo.if20502026k01g1doneate.entities.User;
+import io.github.danarrigo.if20502026k01g1doneate.enums.NotificationType;
 import io.github.danarrigo.if20502026k01g1doneate.services.NotificationService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
+import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import static org.mockito.Mockito.*;
@@ -30,49 +37,78 @@ class NotificationControllerTest {
     private UUID donationId;
     private User mockUser;
 
+    // Buat class konkret pengganti anonymous class untuk menghindari error konversi JSON
+    class DummyUser extends User {
+        public DummyUser() {}
+    }
+
     @BeforeEach
     void setUp() {
         notificationService = mock(NotificationService.class);
         
         NotificationController notificationController = new NotificationController(notificationService);
-        mockMvc = MockMvcBuilders.standaloneSetup(notificationController).build();
+        
+        // Konfigurasi ObjectMapper agar paham cara membaca tipe tanggal LocalDateTime
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.registerModule(new JavaTimeModule());
 
-        mockUser = new User() {};
+        // Bekali MockMvc dengan kemampuan membaca parameter Pageable dan menulis JSON
+        mockMvc = MockMvcBuilders.standaloneSetup(notificationController)
+                .setCustomArgumentResolvers(new PageableHandlerMethodArgumentResolver())
+                .setMessageConverters(new MappingJackson2HttpMessageConverter(objectMapper))
+                .build();
+
+        mockUser = new DummyUser();
         mockUser.setUsername("Dani");
 
         notificationId = UUID.randomUUID();
         donationId = UUID.randomUUID();
         
-        mockNotification = new Notification("Test Notifikasi SKPL", LocalDateTime.now(), mockUser);
+        mockNotification = new Notification();
         mockNotification.setNotificationId(notificationId);
+        mockNotification.setTitle("Pemberitahuan Sistem");
+        mockNotification.setMessageBody("Test Notifikasi SKPL");
+        mockNotification.setTimeStamp(LocalDateTime.now());
+        mockNotification.setUser(mockUser);
         mockNotification.setRelatedDonationId(donationId);
+        mockNotification.setType(NotificationType.SISTEM);
     }
 
-    // (1) Test Endpoint GET (SKPL: Skenario Normal - Ada Notifikasi)
     @Test
     void testGetUserNotifications_NotEmpty() throws Exception {
-        when(notificationService.getUserNotifications("Dani")).thenReturn(Arrays.asList(mockNotification));
+        // Gunakan PageRequest.of() eksplisit, jangan biarkan kosong (unpaged)
+        Slice<Notification> slice = new SliceImpl<>(List.of(mockNotification), PageRequest.of(0, 10), false);
+        
+        when(notificationService.getUserNotifications(eq("Dani"), anyString(), any(PageRequest.class)))
+                .thenReturn(slice);
 
-        mockMvc.perform(get("/api/notifications/user/Dani"))
+        mockMvc.perform(get("/api/notifications/user/Dani")
+                .param("filter", "ALL")
+                .param("page", "0")
+                .param("size", "10"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$[0].messageBody").value("Test Notifikasi SKPL"))
-                .andExpect(jsonPath("$[0].relatedDonationId").value(donationId.toString()))
-                .andExpect(jsonPath("$[0].user.username").value("Dani"));
-    }
+                .andExpect(jsonPath("$.content[0].title").value("Pemberitahuan Sistem"))
+                .andExpect(jsonPath("$.content[0].messageBody").value("Test Notifikasi SKPL"))
+                .andExpect(jsonPath("$.content[0].relatedDonationId").value(donationId.toString()));    }
 
-    // (2) Test Endpoint GET (SKPL: Skenario Alternatif - Kotak Masuk Kosong)
     @Test
     void testGetUserNotifications_Empty() throws Exception {
-        when(notificationService.getUserNotifications("UserKosong")).thenReturn(Collections.emptyList());
+        // Gunakan PageRequest.of() eksplisit untuk menghindari UnsupportedOperationException
+        Slice<Notification> emptySlice = new SliceImpl<>(List.of(), PageRequest.of(0, 10), false);
+        
+        when(notificationService.getUserNotifications(eq("UserKosong"), anyString(), any(PageRequest.class)))
+                .thenReturn(emptySlice);
 
-        mockMvc.perform(get("/api/notifications/user/UserKosong"))
+        mockMvc.perform(get("/api/notifications/user/UserKosong")
+                .param("filter", "ALL")
+                .param("page", "0")
+                .param("size", "10"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$").isEmpty()); // Memastikan balasan JSON adalah array kosong []
+                .andExpect(jsonPath("$.content").isEmpty()); 
     }
 
-    // (3) Test Endpoint PUT (Skenario Normal - Tandai Dibaca)
     @Test
     void testMarkNotificationAsRead_Success() throws Exception {
         mockNotification.setRead(true);
@@ -83,7 +119,6 @@ class NotificationControllerTest {
                 .andExpect(jsonPath("$.read").value(true));
     }
 
-    // (4) Test Endpoint PUT (Skenario Gagal - ID Notifikasi Tidak Ada / 404 Not Found)
     @Test
     void testMarkNotificationAsRead_NotFound() throws Exception {
         UUID fakeId = UUID.randomUUID();
@@ -95,12 +130,11 @@ class NotificationControllerTest {
                 .andExpect(status().isNotFound());
     }
 
-    // (5) Test Endpoint DELETE
     @Test
     void testDeleteNotification() throws Exception {
         doNothing().when(notificationService).deleteNotification(notificationId);
 
         mockMvc.perform(delete("/api/notifications/{id}", notificationId.toString()))
-                .andExpect(status().isNoContent()); // Memastikan response HTTP 204 No Content
+                .andExpect(status().isNoContent()); 
     }
 }
